Fix cards overflow bug

--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -10,7 +10,7 @@
     width: 100%;
     padding: 10px 0;
     display: flex;
-    height: 120px;
+    height: 123px;
     margin-bottom: 20px;
     overscroll-behavior: contain contain;
 
